# dummy-ai-test-project

./: README.md  cli.py  gui.py  main.py  pyproject.toml
.github/workflows/: review-bot.yml
models/: transaction.py
services/: tracker.py
tests/: test_tracker.py
